--- a/www-apps/sitebar/ChangeLog
+++ b/www-apps/sitebar/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/sitebar
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/sitebar/ChangeLog,v 1.27 2012/09/13 10:10:47 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/sitebar/ChangeLog,v 1.28 2012/10/04 21:45:13 ranger Exp $
+
+  04 Oct 2012; Brent Baude <ranger@gentoo.org> sitebar-3.3.9-r2.ebuild:
+  Marking sitebar-3.3.9-r2 ppc for bug 429228
 
   13 Sep 2012; Agostino Sarubbo <ago@gentoo.org> sitebar-3.3.9-r2.ebuild:
   Stable for amd64, wrt bug #429228
