--- a/net-misc/proxychains/ChangeLog
+++ b/net-misc/proxychains/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for net-misc/proxychains
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/proxychains/ChangeLog,v 1.16 2011/11/08 07:36:18 radhermit Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/proxychains/ChangeLog,v 1.17 2012/10/04 22:27:12 radhermit Exp $
+
+*proxychains-3.1_p20110225-r1 (04 Oct 2012)
+
+  04 Oct 2012; Tim Harder <radhermit@gentoo.org>
+  +proxychains-3.1_p20110225-r1.ebuild,
+  files/proxychains-3.1_p20110225-glibc214.patch:
+  Revbump to fix build with newer glibc versions (fixes bugs #408427 and
+  #437232, patch by Ilya Gordeev).
 
   08 Nov 2011; Tim Harder <radhermit@gentoo.org>
   proxychains-3.1_p20110225.ebuild,
