--- a/net-misc/proxychains/ChangeLog
+++ b/net-misc/proxychains/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/proxychains
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/proxychains/ChangeLog,v 1.17 2012/10/04 22:27:12 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/proxychains/ChangeLog,v 1.18 2012/10/04 22:28:15 radhermit Exp $
+
+  04 Oct 2012; Tim Harder <radhermit@gentoo.org>
+  -proxychains-3.1_p20110225.ebuild:
+  Remove old.
 
 *proxychains-3.1_p20110225-r1 (04 Oct 2012)
 
