--- a/dev-python/pygit2/ChangeLog
+++ b/dev-python/pygit2/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pygit2
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pygit2/ChangeLog,v 1.14 2012/10/04 22:40:23 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pygit2/ChangeLog,v 1.15 2012/10/04 22:40:50 radhermit Exp $
+
+  04 Oct 2012; Tim Harder <radhermit@gentoo.org> -pygit2-0.17.2.ebuild:
+  Remove old.
 
   04 Oct 2012; Tim Harder <radhermit@gentoo.org> pygit2-0.16.2.ebuild,
   pygit2-0.17.3.ebuild:
