--- a/dev-db/sqlite/ChangeLog
+++ b/dev-db/sqlite/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/sqlite
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.427 2012/09/05 16:26:13 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.428 2012/10/04 23:22:10 ulm Exp $
+
+  04 Oct 2012; Ulrich Müller <ulm@gentoo.org> sqlite-2.8.16-r5.ebuild,
+  sqlite-3.7.12.1.ebuild, sqlite-3.7.13.ebuild, sqlite-3.7.14.ebuild:
+  LICENSE is public-domain, bug 437228.
 
 *sqlite-3.7.14 (05 Sep 2012)
 
