--- a/net-misc/mikutter/ChangeLog
+++ b/net-misc/mikutter/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/mikutter
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/mikutter/ChangeLog,v 1.28 2012/05/28 14:25:02 naota Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/mikutter/ChangeLog,v 1.29 2012/10/05 00:55:07 naota Exp $
+
+*mikutter-0.1.1.863 (05 Oct 2012)
+
+  05 Oct 2012;  <naota@gentoo.org> +mikutter-0.1.1.863.ebuild,
+  -mikutter-0.1.0.690.ebuild:
+  version bump
 
 *mikutter-0.1.1.780 (28 May 2012)
 
@@ -161,4 +167,3 @@
   01 Apr 2011; Naohiro Aota <naota@elisp.net> +mikutter-0.0.2.12.ebuild,
   +files/mikutter, +metadata.xml:
   New ebuild for mikutter. Ebuild written by Furui Shota <mkamotsu@gmail.com>.
-
