--- a/games-engines/qtads/ChangeLog
+++ b/games-engines/qtads/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for games-engines/qtads
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-engines/qtads/ChangeLog,v 1.21 2012/09/03 13:35:13 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-engines/qtads/ChangeLog,v 1.22 2012/10/05 05:44:31 mr_bones_ Exp $
+
+*qtads-2.1.5 (05 Oct 2012)
+
+  05 Oct 2012; Michael Sterrett <mr_bones_@gentoo.org> +qtads-2.1.5.ebuild:
+  version bump
 
   03 Sep 2012; Michael Palimaka <kensington@gentoo.org> qtads-2.1.4.ebuild:
   Add missing slot dependencies on Qt.
