--- a/dev-lang/niecza/ChangeLog
+++ b/dev-lang/niecza/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-lang/niecza
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/niecza/ChangeLog,v 1.4 2012/08/28 07:50:36 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/niecza/ChangeLog,v 1.5 2012/10/05 05:47:31 patrick Exp $
+
+*niecza-22 (05 Oct 2012)
+
+  05 Oct 2012; Patrick Lauer <patrick@gentoo.org> +files/fix-bootstrap-22.patch,
+  +niecza-22.ebuild:
+  Bump
 
 *niecza-21 (28 Aug 2012)
 
