--- a/media-libs/mesa/ChangeLog
+++ b/media-libs/mesa/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/mesa
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/mesa/ChangeLog,v 1.426 2012/10/04 08:37:19 naota Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/mesa/ChangeLog,v 1.427 2012/10/05 06:08:59 naota Exp $
+
+  05 Oct 2012;  <naota@gentoo.org> mesa-8.1_rc1_pre20120724.ebuild,
+  mesa-8.1_rc1_pre20120814.ebuild, mesa-9.0_pre20120918.ebuild,
+  mesa-9_pre20120831-r1.ebuild, mesa-9_pre20120831.ebuild:
+  Use cat as INDENT to workaround build failure on non-GNU system. #428112
 
   04 Oct 2012;  <naota@gentoo.org> +files/mesa-8.0.4-configure-bsd.patch,
   mesa-8.0.3-r1.ebuild, mesa-8.0.3.ebuild, mesa-8.0.4-r1.ebuild,
