--- a/dev-ruby/aws-sdk/ChangeLog
+++ b/dev-ruby/aws-sdk/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-ruby/aws-sdk
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/aws-sdk/ChangeLog,v 1.13 2012/10/02 20:52:19 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/aws-sdk/ChangeLog,v 1.14 2012/10/05 06:09:40 flameeyes Exp $
+
+*aws-sdk-1.6.9 (05 Oct 2012)
+
+  05 Oct 2012; Diego E. Pettenò <flameeyes@gentoo.org> +aws-sdk-1.6.9.ebuild,
+  -aws-sdk-1.6.3.ebuild, -aws-sdk-1.6.8.ebuild,
+  -files/aws-sdk-1.6.3-no-simplecov.patch, -files/aws-sdk.gemspec:
+  Version bump; remove old; remove gemspec as now they ship with one.
 
 *aws-sdk-1.6.8 (02 Oct 2012)
 
