--- a/net-libs/nodejs/ChangeLog
+++ b/net-libs/nodejs/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/nodejs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/nodejs/ChangeLog,v 1.59 2012/10/02 05:20:21 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/nodejs/ChangeLog,v 1.60 2012/10/05 06:13:28 patrick Exp $
+
+*nodejs-0.9.2 (05 Oct 2012)
+
+  05 Oct 2012; Patrick Lauer <patrick@gentoo.org> +nodejs-0.9.2.ebuild:
+  Bump
 
 *nodejs-0.8.11 (02 Oct 2012)
 
