--- a/net-irc/weechat/ChangeLog
+++ b/net-irc/weechat/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-irc/weechat
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/weechat/ChangeLog,v 1.114 2012/08/21 13:28:37 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/weechat/ChangeLog,v 1.115 2012/10/05 06:17:55 scarabeus Exp $
+
+*weechat-0.3.9 (05 Oct 2012)
+
+  05 Oct 2012; Tomáš Chvátal <scarabeus@gentoo.org> +weechat-0.3.9.ebuild:
+  Version bump to latest.
 
   21 Aug 2012; Tomáš Chvátal <scarabeus@gentoo.org> -weechat-0.3.7.ebuild,
   weechat-0.3.8.ebuild, weechat-9999.ebuild:
