--- a/net-libs/qxmpp/ChangeLog
+++ b/net-libs/qxmpp/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/qxmpp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/qxmpp/ChangeLog,v 1.22 2012/10/04 15:19:59 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/qxmpp/ChangeLog,v 1.23 2012/10/05 07:07:01 pinkbyte Exp $
+
+  05 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> -qxmpp-0.3.45.2.ebuild,
+  -qxmpp-0.7.3.ebuild:
+  Drop old versions
 
   04 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> qxmpp-0.7.4.ebuild,
   qxmpp-9999.ebuild:
