--- a/dev-lang/erlang/ChangeLog
+++ b/dev-lang/erlang/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-lang/erlang
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/erlang/ChangeLog,v 1.221 2012/06/17 17:49:57 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/erlang/ChangeLog,v 1.222 2012/10/05 08:18:10 djc Exp $
+
+*erlang-15.2.2 (05 Oct 2012)
+
+  05 Oct 2012; Dirkjan Ochtman <djc@gentoo.org> +erlang-15.2.2.ebuild:
+  Version bump to 15.2.2, fix bugs 434870, 434832, 434150 (thanks to
+  billiob@gmail.com).
 
   17 Jun 2012; Raúl Porcel <armin76@gentoo.org> erlang-15.2.ebuild:
   alpha/sparc stable wrt #413825
