--- a/dev-lang/erlang/ChangeLog
+++ b/dev-lang/erlang/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-lang/erlang
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/erlang/ChangeLog,v 1.222 2012/10/05 08:18:10 djc Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/erlang/ChangeLog,v 1.223 2012/10/05 08:22:04 djc Exp $
+
+  05 Oct 2012; Dirkjan Ochtman <djc@gentoo.org> -erlang-13.2.4.ebuild,
+  -files/erlang-14.2.2-interface.patch, -erlang-14.2.4.ebuild:
+  Remove old versions.
 
 *erlang-15.2.2 (05 Oct 2012)
 
