--- a/media-libs/libshout/ChangeLog
+++ b/media-libs/libshout/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/libshout
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libshout/ChangeLog,v 1.43 2012/09/30 17:25:24 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libshout/ChangeLog,v 1.44 2012/10/05 09:08:43 ssuominen Exp $
+
+  05 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> -libshout-2.1.ebuild,
+  -libshout-2.2.2.ebuild, -files/libshout-2.2.2-asneeded.patch,
+  -files/libshout-2.2.2-automagic.patch, -libshout-2.3.0.ebuild:
+  old
 
   30 Sep 2012; Raúl Porcel <armin76@gentoo.org> libshout-2.3.1.ebuild:
   alpha/ia64/sh/sparc stable wrt #429126
