--- a/media-libs/libshout/ChangeLog
+++ b/media-libs/libshout/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libshout
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libshout/ChangeLog,v 1.44 2012/10/05 09:08:43 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libshout/ChangeLog,v 1.45 2012/10/05 09:12:37 ssuominen Exp $
+
+  05 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> libshout-2.3.1.ebuild:
+  USE="static-libs" and use prune_libtool_files function from eutils.eclass to
+  remove unnecessary libshout.la.
 
   05 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> -libshout-2.1.ebuild,
   -libshout-2.2.2.ebuild, -files/libshout-2.2.2-asneeded.patch,
