--- a/dev-ruby/main/ChangeLog
+++ b/dev-ruby/main/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/main
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/main/ChangeLog,v 1.11 2012/08/26 06:21:03 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/main/ChangeLog,v 1.12 2012/10/05 10:20:38 graaff Exp $
+
+*main-5.1.0 (05 Oct 2012)
+
+  05 Oct 2012; Hans de Graaff <graaff@gentoo.org> +main-5.1.0.ebuild:
+  Version bump.
 
   26 Aug 2012; Hans de Graaff <graaff@gentoo.org> -main-4.2.0-r1.ebuild,
   -main-4.4.0.ebuild, -main-5.0.0.ebuild:
