--- a/dev-ruby/rack-test/ChangeLog
+++ b/dev-ruby/rack-test/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/rack-test
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rack-test/ChangeLog,v 1.24 2012/09/27 09:46:32 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rack-test/ChangeLog,v 1.25 2012/10/05 10:36:53 graaff Exp $
+
+*rack-test-0.6.2 (05 Oct 2012)
+
+  05 Oct 2012; Hans de Graaff <graaff@gentoo.org> +rack-test-0.6.2.ebuild:
+  Version bump.
 
   27 Sep 2012; Samuli Suominen <ssuominen@gentoo.org> rack-test-0.6.1.ebuild:
   Keyword ~ppc wrt #396291
