--- a/net-misc/youtube-viewer/ChangeLog
+++ b/net-misc/youtube-viewer/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-misc/youtube-viewer
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-viewer/ChangeLog,v 1.11 2012/09/24 23:39:29 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-viewer/ChangeLog,v 1.12 2012/10/05 11:24:57 hasufell Exp $
+
+*youtube-viewer-3.0.2 (05 Oct 2012)
+
+  05 Oct 2012; Julian Ospald <hasufell@gentoo.org>
+  -youtube-viewer-3.0.0_p20120820.ebuild,
+  -youtube-viewer-3.0.1_p20120924.ebuild, +youtube-viewer-3.0.2.ebuild:
+  version bump, remove old
 
 *youtube-viewer-3.0.1_p20120924 (24 Sep 2012)
 
