--- a/dev-python/setuptools/ChangeLog
+++ b/dev-python/setuptools/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for dev-python/setuptools
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/setuptools/ChangeLog,v 1.157 2012/09/20 12:09:33 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/setuptools/ChangeLog,v 1.158 2012/10/05 11:32:13 djc Exp $
+
+  05 Oct 2012; Dirkjan Ochtman <djc@gentoo.org>
+  -files/distribute-0.6.12-disable_versioned_easy_install.patch,
+  -files/distribute-0.6.12-fix_deprecation_warnings.patch,
+  -setuptools-0.6.14.ebuild, -setuptools-0.6.15.ebuild,
+  -setuptools-0.6.16.ebuild, -setuptools-0.6.19.ebuild,
+  -setuptools-0.6.24.ebuild, -setuptools-0.6.25.ebuild:
+  Remove old versions.
 
 *setuptools-0.6.28 (20 Sep 2012)
 
