--- a/app-laptop/prey/ChangeLog
+++ b/app-laptop/prey/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-laptop/prey
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-laptop/prey/ChangeLog,v 1.7 2012/09/23 08:13:24 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-laptop/prey/ChangeLog,v 1.8 2012/10/05 12:27:07 ago Exp $
+
+  05 Oct 2012; Agostino Sarubbo <ago@gentoo.org> prey-0.5.4.ebuild:
+  Move rm to src_prepare(), wrt to bug #437294
 
   23 Sep 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> prey-0.5.4.ebuild:
   x86 stable wrt bug #432776
