--- a/media-video/gpac/ChangeLog
+++ b/media-video/gpac/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for media-video/gpac
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/gpac/ChangeLog,v 1.99 2012/10/04 17:12:59 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/gpac/ChangeLog,v 1.100 2012/10/05 13:47:42 axs Exp $
+
+*gpac-0.5.0 (05 Oct 2012)
+
+  05 Oct 2012; Ian Stakenvicius <axs@gentoo.org>
+  +files/110_all_implicitdecls.patch, +files/gpac-0.5.0-build-fixes.patch,
+  +files/160_all_externalamr.patch, +gpac-0.5.0.ebuild,
+  +files/210_all_system_libogg.patch:
+  version bump, bug 426666
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> gpac-0.4.5-r5.ebuild:
   Stable for amd64, wrt bug #437206
