--- a/net-dns/avahi/ChangeLog
+++ b/net-dns/avahi/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-dns/avahi
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/avahi/ChangeLog,v 1.231 2012/10/02 21:28:49 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/avahi/ChangeLog,v 1.232 2012/10/05 14:21:15 ranger Exp $
+
+  05 Oct 2012; Brent Baude <ranger@gentoo.org> avahi-0.6.30-r3.ebuild:
+  Marking avahi-0.6.30-r3 ppc for bug 431830
 
   02 Oct 2012; Markus Meier <maekke@gentoo.org> avahi-0.6.30-r3.ebuild:
   arm stable, bug #431830
