--- a/net-analyzer/ettercap/ChangeLog
+++ b/net-analyzer/ettercap/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/ettercap
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ettercap/ChangeLog,v 1.95 2012/09/28 16:01:36 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ettercap/ChangeLog,v 1.96 2012/10/05 14:52:36 ago Exp $
+
+  05 Oct 2012; Agostino Sarubbo <ago@gentoo.org>
+  ettercap-0.7.5_pre20120928.ebuild:
+  Add app-text/ghostscript-gpl as a DEPEND
 
 *ettercap-0.7.5_pre20120928 (28 Sep 2012)
 
