--- a/sys-auth/consolekit/ChangeLog
+++ b/sys-auth/consolekit/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-auth/consolekit
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-auth/consolekit/ChangeLog,v 1.134 2012/08/08 14:42:09 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-auth/consolekit/ChangeLog,v 1.135 2012/10/05 14:58:54 ssuominen Exp $
+
+  05 Oct 2012; Samuli Suominen <ssuominen@gentoo.org>
+  consolekit-0.4.5_p20120320-r1.ebuild:
+  Use prune_libtool_files and call it with the --all argument for libtool files
+  in /lib/security.
 
 *consolekit-0.4.5_p20120320-r1 (08 Aug 2012)
 
