--- a/net-analyzer/net-snmp/ChangeLog
+++ b/net-analyzer/net-snmp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/net-snmp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/net-snmp/ChangeLog,v 1.242 2012/10/04 15:30:14 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/net-snmp/ChangeLog,v 1.243 2012/10/05 17:04:55 ranger Exp $
+
+  05 Oct 2012; Brent Baude <ranger@gentoo.org> net-snmp-5.7.2_rc1.ebuild:
+  Marking net-snmp-5.7.2_rc1 ppc for bug 431752
 
 *net-snmp-5.7.2_rc3 (04 Oct 2012)
 
