--- a/x11-misc/slim/ChangeLog
+++ b/x11-misc/slim/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for x11-misc/slim
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/slim/ChangeLog,v 1.88 2012/06/27 16:01:19 axs Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/slim/ChangeLog,v 1.89 2012/10/05 17:05:56 axs Exp $
+
+*slim-1.3.4-r1 (05 Oct 2012)
+
+  05 Oct 2012; Ian Stakenvicius <axs@gentoo.org> -files/slim-1.3.3-config.diff,
+  -slim-1.3.4.ebuild, +slim-1.3.4-r1.ebuild, +files/slim-1.3.4-config.diff,
+  +files/slim-1.3.4-pam-end.patch:
+  force default vt07 (bug 436620) and ensure pam session isn't erroneously
+  cleaned during child execution (cause for krb5 ticket cache not existing in
+  bug 436556)
 
 *slim-1.3.4 (27 Jun 2012)
 
