--- a/www-apps/mediawiki/ChangeLog
+++ b/www-apps/mediawiki/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/mediawiki
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/mediawiki/ChangeLog,v 1.199 2012/09/13 07:18:35 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/mediawiki/ChangeLog,v 1.200 2012/10/05 17:07:45 ranger Exp $
+
+  05 Oct 2012; Brent Baude <ranger@gentoo.org> mediawiki-1.19.2.ebuild:
+  Marking mediawiki-1.19.2 ppc for bug 433774
 
   13 Sep 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> mediawiki-1.19.2.ebuild:
   x86 stable wrt bug #433774
