--- a/app-crypt/johntheripper/ChangeLog
+++ b/app-crypt/johntheripper/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-crypt/johntheripper
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/johntheripper/ChangeLog,v 1.143 2012/07/05 21:11:28 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/johntheripper/ChangeLog,v 1.144 2012/10/05 17:43:57 zerochaos Exp $
+
+*johntheripper-1.7.9-r5 (05 Oct 2012)
+
+  05 Oct 2012; Rick Farina <zerochaos@gentoo.org>
+  +johntheripper-1.7.9-r5.ebuild:
+  bump to jumbo 7, seems to work
 
 *johntheripper-1.7.9-r4 (05 Jul 2012)
 
