--- a/dev-ruby/mkrf/ChangeLog
+++ b/dev-ruby/mkrf/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/mkrf
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mkrf/ChangeLog,v 1.28 2012/09/27 10:40:22 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mkrf/ChangeLog,v 1.29 2012/10/05 17:44:08 ranger Exp $
+
+  05 Oct 2012; Brent Baude <ranger@gentoo.org> mkrf-0.2.3-r2.ebuild:
+  Marking mkrf-0.2.3-r2 ppc64 for bug 430206
 
   27 Sep 2012; Samuli Suominen <ssuominen@gentoo.org> mkrf-0.2.3-r2.ebuild:
   Keyword ~ppc64 wrt #422887
