--- a/media-sound/banshee/ChangeLog
+++ b/media-sound/banshee/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/banshee
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/banshee/ChangeLog,v 1.157 2012/09/30 09:57:33 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/banshee/ChangeLog,v 1.158 2012/10/05 17:52:22 pacho Exp $
+
+  05 Oct 2012; Pacho Ramos <pacho@gentoo.org> banshee-2.6.0.ebuild:
+  Drop gnome-icon-theme dependency, bug #437246 by timtasse. gnome-settings-
+  daemon is still needed for Banshee.MultimediaKeys to work and gconf-sharp is
+  checked by configure.
 
 *banshee-2.6.0 (30 Sep 2012)
 
