--- a/app-arch/unace/ChangeLog
+++ b/app-arch/unace/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/unace
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/unace/ChangeLog,v 1.43 2012/10/03 17:58:24 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/unace/ChangeLog,v 1.44 2012/10/05 17:55:12 ranger Exp $
+
+  05 Oct 2012; Brent Baude <ranger@gentoo.org> unace-2.5-r2.ebuild:
+  Marking unace-2.5-r2 ppc64 for bug 431696
 
   03 Oct 2012; Brent Baude <ranger@gentoo.org> unace-2.5-r2.ebuild:
   Marking unace-2.5-r2 ppc for bug 431696
