--- a/media-sound/mpd/ChangeLog
+++ b/media-sound/mpd/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/mpd
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/mpd/ChangeLog,v 1.299 2012/08/27 17:30:30 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/mpd/ChangeLog,v 1.300 2012/10/05 17:56:12 ranger Exp $
+
+  05 Oct 2012; Brent Baude <ranger@gentoo.org> mpd-0.16.8.ebuild:
+  Marking mpd-0.16.8 ppc64 for bug 426834
 
   27 Aug 2012; Raúl Porcel <armin76@gentoo.org> mpd-0.16.8.ebuild:
   sh/sparc stable wrt #426834
