--- a/sys-fs/dosfstools/ChangeLog
+++ b/sys-fs/dosfstools/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-fs/dosfstools
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/dosfstools/ChangeLog,v 1.95 2012/10/03 18:02:11 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/dosfstools/ChangeLog,v 1.96 2012/10/05 17:57:47 ranger Exp $
+
+  05 Oct 2012; Brent Baude <ranger@gentoo.org> dosfstools-3.0.12.ebuild:
+  Marking dosfstools-3.0.12 ppc64 for bug 432330
 
   03 Oct 2012; Brent Baude <ranger@gentoo.org> dosfstools-3.0.12.ebuild:
   Marking dosfstools-3.0.12 ppc for bug 432330
