--- a/app-admin/conky/ChangeLog
+++ b/app-admin/conky/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/conky
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/conky/ChangeLog,v 1.185 2012/10/03 18:01:22 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/conky/ChangeLog,v 1.186 2012/10/05 17:59:23 ranger Exp $
+
+  05 Oct 2012; Brent Baude <ranger@gentoo.org> conky-1.9.0.ebuild:
+  Marking conky-1.9.0 ppc64 for bug 430638
 
   03 Oct 2012; Brent Baude <ranger@gentoo.org> conky-1.9.0.ebuild:
   Marking conky-1.9.0 ppc for bug 430638
