--- a/dev-util/debootstrap/ChangeLog
+++ b/dev-util/debootstrap/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/debootstrap
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/debootstrap/ChangeLog,v 1.188 2012/10/03 18:04:34 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/debootstrap/ChangeLog,v 1.189 2012/10/05 18:01:02 ranger Exp $
+
+  05 Oct 2012; Brent Baude <ranger@gentoo.org> debootstrap-1.0.42.ebuild:
+  Marking debootstrap-1.0.42 ppc64 for bug 432424
 
   03 Oct 2012; Brent Baude <ranger@gentoo.org> debootstrap-1.0.42.ebuild:
   Marking debootstrap-1.0.42 ppc for bug 432424
