--- a/net-print/hplip/ChangeLog
+++ b/net-print/hplip/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-print/hplip
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/hplip/ChangeLog,v 1.241 2012/10/05 16:28:51 billie Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-print/hplip/ChangeLog,v 1.242 2012/10/05 18:02:05 ranger Exp $
+
+  05 Oct 2012; Brent Baude <ranger@gentoo.org> hplip-3.12.9-r1.ebuild:
+  Marking hplip-3.12.9-r1 ppc64 for bug 436858
 
 *hplip-3.12.10 (05 Oct 2012)
 
