--- a/media-libs/allegro/ChangeLog
+++ b/media-libs/allegro/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/allegro
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/allegro/ChangeLog,v 1.132 2012/09/23 08:52:53 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/allegro/ChangeLog,v 1.133 2012/10/05 18:03:00 ranger Exp $
+
+  05 Oct 2012; Brent Baude <ranger@gentoo.org> allegro-5.0.7.ebuild:
+  Marking allegro-5.0.7 ppc64 for bug 432082
 
   23 Sep 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> allegro-5.0.7.ebuild:
   x86 stable wrt bug #432082
