--- a/sys-apps/busybox/ChangeLog
+++ b/sys-apps/busybox/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/busybox
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/busybox/ChangeLog,v 1.328 2012/10/03 18:51:18 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/busybox/ChangeLog,v 1.329 2012/10/05 18:03:52 ranger Exp $
+
+  05 Oct 2012; Brent Baude <ranger@gentoo.org> busybox-1.20.2.ebuild:
+  Marking busybox-1.20.2 ppc64 for bug 431948
 
   03 Oct 2012; Mike Frysinger <vapier@gentoo.org> busybox-1.20.2.ebuild,
   busybox-9999.ebuild:
