--- a/x11-misc/xfe/ChangeLog
+++ b/x11-misc/xfe/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xfe
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xfe/ChangeLog,v 1.77 2012/10/04 21:39:23 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xfe/ChangeLog,v 1.78 2012/10/05 18:04:40 ranger Exp $
+
+  05 Oct 2012; Brent Baude <ranger@gentoo.org> xfe-1.32.5.ebuild:
+  Marking xfe-1.32.5 ppc64 for bug 437014
 
   04 Oct 2012; Brent Baude <ranger@gentoo.org> xfe-1.32.5.ebuild:
   Marking xfe-1.32.5 ppc for bug 437014
