--- a/app-crypt/md5deep/ChangeLog
+++ b/app-crypt/md5deep/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-crypt/md5deep
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/md5deep/ChangeLog,v 1.69 2012/08/27 17:59:22 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/md5deep/ChangeLog,v 1.70 2012/10/05 18:05:05 tristan Exp $
+
+  05 Oct 2012; Tristan Heaven <tristan@gentoo.org> md5deep-4.2.ebuild:
+  RESTRICT=test as it only checks against an installed version's output
+  (package would depend on itself), bug #425256
 
   27 Aug 2012; Raúl Porcel <armin76@gentoo.org> md5deep-3.9.1.ebuild,
   md5deep-4.0.0.ebuild, md5deep-4.0.1.ebuild, md5deep-4.2.ebuild:
