--- a/net-dns/host/ChangeLog
+++ b/net-dns/host/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-dns/host
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/host/ChangeLog,v 1.21 2012/10/02 19:07:35 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/host/ChangeLog,v 1.22 2012/10/05 18:06:24 ranger Exp $
+
+  05 Oct 2012; Brent Baude <ranger@gentoo.org> host-20070128-r1.ebuild:
+  Marking host-20070128-r1 ppc64 for bug 434036
 
   02 Oct 2012; Anthony G. Basile <blueness@gentoo.org> host-20070128-r1.ebuild:
   keyword ~mips, bug #434036
