--- a/dev-db/libdbi/ChangeLog
+++ b/dev-db/libdbi/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/libdbi
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/libdbi/ChangeLog,v 1.46 2012/09/19 15:41:42 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/libdbi/ChangeLog,v 1.47 2012/10/05 18:09:38 ranger Exp $
+
+  05 Oct 2012; Brent Baude <ranger@gentoo.org> libdbi-0.8.4.ebuild:
+  Marking libdbi-0.8.4 ppc64 for bug 425306
 
   19 Sep 2012; Jeroen Roovers <jer@gentoo.org> libdbi-0.8.4.ebuild:
   Stable for HPPA (bug #425306).
