--- a/dev-ruby/activesupport/ChangeLog
+++ b/dev-ruby/activesupport/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/activesupport
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/activesupport/ChangeLog,v 1.185 2012/08/27 18:19:13 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/activesupport/ChangeLog,v 1.186 2012/10/05 18:10:40 ranger Exp $
+
+  05 Oct 2012; Brent Baude <ranger@gentoo.org> activesupport-2.3.14-r1.ebuild:
+  Marking activesupport-2.3.14-r1 ppc64 for bug 422745
 
   27 Aug 2012; Hans de Graaff <graaff@gentoo.org> -activesupport-3.0.16.ebuild,
   -activesupport-3.1.7.ebuild, -activesupport-3.2.7.ebuild:
