--- a/dev-ruby/text-hyphen/ChangeLog
+++ b/dev-ruby/text-hyphen/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/text-hyphen
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/text-hyphen/ChangeLog,v 1.45 2012/09/23 16:01:41 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/text-hyphen/ChangeLog,v 1.46 2012/10/05 18:12:22 ranger Exp $
+
+  05 Oct 2012; Brent Baude <ranger@gentoo.org> text-hyphen-1.2.ebuild:
+  Marking text-hyphen-1.2 ppc64 for bug 424846
 
 *text-hyphen-1.4.1 (23 Sep 2012)
 
