--- a/dev-ruby/mime-types/ChangeLog
+++ b/dev-ruby/mime-types/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/mime-types
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mime-types/ChangeLog,v 1.31 2012/09/17 20:42:08 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mime-types/ChangeLog,v 1.32 2012/10/05 18:13:11 ranger Exp $
+
+  05 Oct 2012; Brent Baude <ranger@gentoo.org> mime-types-1.19.ebuild:
+  Marking mime-types-1.19 ppc64 for bug 432844
 
   17 Sep 2012; Johannes Huber <johu@gentoo.org> mime-types-1.19.ebuild:
   Stable for x86, wrt bug #432844
