--- a/app-text/utrac/ChangeLog
+++ b/app-text/utrac/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/utrac
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/utrac/ChangeLog,v 1.4 2012/03/11 14:19:53 wschlich Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/utrac/ChangeLog,v 1.5 2012/10/05 18:31:11 ago Exp $
+
+  05 Oct 2012; Agostino Sarubbo <ago@gentoo.org> utrac-0.3.0-r1.ebuild:
+  Respect CC, wrt to bug #243758
 
 *utrac-0.3.0-r1 (11 Mar 2012)
 
@@ -19,4 +22,3 @@
   04 Jun 2006; Wolfram Schlich <wschlich@gentoo.org> +metadata.xml,
   +utrac-0.3.0.ebuild:
   initial import
-
