--- a/app-text/utrac/ChangeLog
+++ b/app-text/utrac/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/utrac
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/utrac/ChangeLog,v 1.5 2012/10/05 18:31:11 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/utrac/ChangeLog,v 1.6 2012/10/05 18:32:04 ago Exp $
+
+  05 Oct 2012; Agostino Sarubbo <ago@gentoo.org> -utrac-0.3.0.ebuild:
+  Remove old
 
   05 Oct 2012; Agostino Sarubbo <ago@gentoo.org> utrac-0.3.0-r1.ebuild:
   Respect CC, wrt to bug #243758
