--- a/x11-misc/slim/ChangeLog
+++ b/x11-misc/slim/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/slim
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/slim/ChangeLog,v 1.89 2012/10/05 17:05:56 axs Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/slim/ChangeLog,v 1.90 2012/10/05 19:22:14 axs Exp $
+
+  05 Oct 2012; Ian Stakenvicius <axs@gentoo.org> slim-1.3.4-r1.ebuild,
+  +files/slim-1.3.4-arm.patch:
+  swapped snprintf for sprintf to support arm's broken C++98 (bug 430502)
 
 *slim-1.3.4-r1 (05 Oct 2012)
 
