--- a/app-emulation/libvirt/ChangeLog
+++ b/app-emulation/libvirt/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-emulation/libvirt
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.215 2012/09/30 05:09:07 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.216 2012/10/05 19:28:29 cardoe Exp $
+
+*libvirt-0.10.2-r1 (05 Oct 2012)
+
+  05 Oct 2012; Doug Goldstein <cardoe@gentoo.org> +libvirt-0.10.2-r1.ebuild:
+  Bump for newer v5 of the udev based virInterface patch.
 
   30 Sep 2012; Doug Goldstein <cardoe@gentoo.org> -files/libvirtd.confd-r2,
   -files/libvirtd.init-r5, metadata.xml:
